# ohlc-converter

./: .gitignore  LICENSE  Main.py  README.md  Visualisation.py  pyproject.toml
src/ohlc-converter/: Config.py  Conversion.py  Io.py  Main.py
